--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -17,3 +17,9 @@
     margin-left: 30px;
   }
 }
+
+@media screen and (min-width: 1280px) {
+  .footer {
+    margin-bottom: 60px;
+  }
+}
