--- a/blocks/header.css
+++ b/blocks/header.css
@@ -18,4 +18,9 @@
   }
 }
 
+@media screen and (min-width: 1280px) {
+  .header {
+    margin-bottom: 40px;
+  }
+}
 /******End Header CSS **********/
